# BandKit

./: .gitignore  .gitmodules  AGENTS.md  ANDROID_JNI_INTEGRATION_GUIDE.md  LICENSE  LICENSE_astrobox.txt  NOTICE.md  README.md  build.bat  build.gradle.kts  gradle.properties  settings.gradle.kts
.mimocode/: .cron-lock
.mimocode/plans/: 1781717762045-eager-lagoon.md  1781758935129-silent-squid.md
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/autoresearch/20260716-064056-2-118-begin-2-118-rust-jni-app-com-miband-app-hyperos-wi-2/logs/: heartbeat.jsonl
.superpowers/sdd/: progress.md
androidApp/: build.gradle.kts  proguard-rules.pro
androidApp/src/main/: AndroidManifest.xml
build-plugins/: build.gradle.kts  settings.gradle.kts
desktopApp/: build.gradle.kts
docs/superpowers/plans/: 2026-07-16-android-jni-migration.md  2026-07-20-project-optimization.md  2026-07-22-mi-login.md
docs/superpowers/specs/: 2026-07-16-android-jni-migration-design.md  2026-07-20-performance-optimization-design.md  2026-07-20-project-optimization-design.md  2026-07-22-mi-login-design.md
gradle/: libs.versions.toml
rust/: .gitignore
rust/corelib-standalone/: Cargo.toml  build.rs
rust/corelib-standalone/src/: auth.rs  crypto_aesccm.rs  crypto_aesctr.rs  device.rs  jni.rs  lib.rs  tools.rs
rust/corelib-standalone/src/protocol/: layer1.rs  layer1cmd.rs  layer2.rs
rust/pb/: Cargo.toml
rust/pb/protos/xiaomi/: wear_media.proto  (+2 more)
shared/: build.gradle.kts
spotless/: copyright.txt
webApp/: build.gradle.kts
(+101 files in other folders)
