[workspace]
members = ["."]

[package]
name = "corelib-standalone"
version = "2.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# --- crypto / hash ---
sha2 = "0.10.9"
sha1 = "0.10"
hmac = "0.12.1"
rc4 = "0.1"
cipher = "0.4"
aes = "0.8.4"
cbc = "0.1"
ctr = "0.9.2"
ccm = "0.5.0"
crc = "3.3.0"
md-5 = "0.10.6"

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
prost = "0.14.1"
byteorder = "1.5"

# --- utility ---
anyhow = "1.0.100"
log = "0.4"
parking_lot = "0.12.5"
once_cell = "1.21.3"
nanorand = "0.8"
hex = "0.4.3"
num_enum = "0.7.5"

pb = { path = "../pb" }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", features = ["invocation"], optional = true }

[features]
default = []
android-jni = ["jni"]
